--- a/app/assets/stylesheets/works.scss
+++ b/app/assets/stylesheets/works.scss
@@ -1,17 +1,13 @@
-body {
-  margin: 0px;
-  padding: 0px;
 
 #top {
   color: black;
   font-weight: lighter;
   font-family: sans-serif;
-}
+
 }
 #books, #albums, #movies{
 font-family: sans-serif;
   display: inline-block;
-  width: 30%;
   vertical-align: top;
   margin-left: 5px;
   margin-right: 5px;
